--- a/com.automationpractice/src/main/resources/config/config.properties
+++ b/com.automationpractice/src/main/resources/config/config.properties
@@ -4,6 +4,8 @@ MYSQLJDBC.host=jdbc:mysql://localhost/java_midterm?serverTimezone=UTC&useSSL=fal
 MYSQLJDBC.username=root
 MYSQLJDBC.password=Test210!
 
+url = http://automationpractice.com/
+
 
 
 
