--- a/com.automationpractice/src/main/resources/config/config.properties
+++ b/com.automationpractice/src/main/resources/config/config.properties
@@ -2,9 +2,9 @@
 MYSQLJDBC.driver=com.mysql.cj.jdbc.Driver
 MYSQLJDBC.host=jdbc:mysql://localhost/java_midterm?serverTimezone=UTC&useSSL=false
 MYSQLJDBC.username=root
-MYSQLJDBC.password=Test210!
+MYSQLJDBC.password=root
 
-url = http://automationpractice.com/
+url = https://www.saucedemo.com/
 
 
 
