--- a/com.freecrm/src/main/resources/config/config.properties
+++ b/com.freecrm/src/main/resources/config/config.properties
@@ -4,6 +4,6 @@ MYSQLJDBC.host=jdbc:mysql://localhost/java_midterm?serverTimezone=UTC&useSSL=fal
 MYSQLJDBC.username=root
 MYSQLJDBC.password=root
 
-url=https://freecrm.com/
+url=https://ui.cogmento.com/
 
 
